--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,11 @@
     "prettier"
   ],
   "rules": {
-    "no-console": "warn"
+    "@typescript-eslint/interface-name-prefix": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "no-irregular-whitespace": "off"
   }
 }
