--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,8 @@
   "crons": [
     {
       "path": "/cron/api",
-      "schedule": "0 8,20 * * *"
-    }
-  ],
-  "functions": {
-    "*": {
+      "schedule": "0 8,20 * * *",
       "maxDuration": 120
     }
-  }
+  ]
 }
