--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,11 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "paths": {
+      "baseUrl" : ["."],
+      "@/*": ["./*"]
+    }
   },
   "include": [
     "next-env.d.ts",
