--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "rss-parser": "^3.13.0",
+    "swr": "^2.2.5",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
