--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/postgres": "^0.8.0",
     "axios": "^1.6.8",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "next-pwa": "^5.6.0",
     "prisma": "^5.13.0",
     "react": "^18",
