--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "rss-parser": "^3.13.0",
     "swr": "^2.2.5",
+    "ulid": "^2.3.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
